fix: 🐛 fix mobile having slight horizontal scrolll

--- a/website/src/views/mobility/MobilityContainer/MobilityContainer.scss
+++ b/website/src/views/mobility/MobilityContainer/MobilityContainer.scss
@@ -27,7 +27,7 @@
 
   .map {
     flex: 1;
-    min-width: 24rem;
+    min-width: min(100vw, 24rem);
     overflow: hidden;
 
     @media (max-width: 768px) {
